Fix alignment: Remove float and replace with rows, cols and text alignment.

--- a/client/src/sass/partials/_chatBox.scss
+++ b/client/src/sass/partials/_chatBox.scss
@@ -34,8 +34,7 @@ li.main-chat-message {
     }
   }
 
-  .time-stamp {
-    float: right;
+  .timestamp {
     margin: -2px 5px 5px 0;
 
     span {
@@ -55,6 +54,5 @@ li.main-chat-message:last-child {
 }
 
 button.btn-delete {
-  float: right;
   cursor: pointer;
 }
